--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.12.3",
     "framer-motion": "^10.12.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
