--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
+    "request": "^2.88.2",
     "sequelize": "^6.31.1"
   }
 }
