--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mailchimp-api-v3": "^1.15.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
