--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "@paypal/react-paypal-js": "^7.8.3",
     "axios": "^1.4.0",
     "firebase": "^9.22.0",
     "framer-motion": "^10.12.9",
