--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mailchimp-api-v3": "^1.15.0",
     "morgan": "^1.10.0",
