--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home2/ingenia/public_html/
-    -/bin/cp -R * $DEPLOYPATH
+    - /bin/cp server.js $DEPLOYPATH
